finished some css adjustments and wrapper overflow fix

--- a/src/components/SelectedWork/style.scss
+++ b/src/components/SelectedWork/style.scss
@@ -5,7 +5,7 @@
   &::after,
   &::before {
     content: "";
-    @apply bg-dimmed h-full w-full max-md:hidden absolute top-0 left-0 transition-all duration-500 -z-10 ease-out;
+    @apply bg-dimmed opacity-0 h-full w-full max-md:hidden absolute top-0 left-0 transition-all duration-700 -z-10 ease-out;
   }
   &:hover::after {
     @apply left-3 top-3;
