--- a/src/index.scss
+++ b/src/index.scss
@@ -58,7 +58,3 @@ html.lenis {
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
 }
-
-.wrapper {
-  overflow: hidden;
-}
